# solidstateleipzig.github.io

./: .buildinfo  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  pyproject.toml  search.html  searchindex.js
content/: _config.yml  _toc.yml  intro.md
l10_dielectric/: l10_content.html  l10_definitions.html  l10_method.html  l10_objectives.html  l10_problem.html
l11_sound/: l11_content.html  l11_definitions.html  l11_method.html  l11_objectives.html  l11_problem.html
l12_light/: l12_content.html  l12_definitions.html  l12_method.html  l12_objectives.html  l12_problem.html
l1_bravais/: l1_content.html  l1_definitions.html  l1_method.html  l1_objectives.html  l1_problem.html
l2_symmetry/: l2_content.html  l2_definitions.html  l2_method.html  l2_objectives.html  l2_problem.html
l3_groups/: l3_content.html  l3_definitions.html  l3_method.html  l3_objectives.html  l3_problem.html
l4_structure/: l4_content.html  l4_definitions.html  l4_method.html  l4_objectives.html  l4_problem.html
l5_reciprocal/: l5_content.html  l5_definitions.html  l5_method.html  l5_objectives.html  l5_problem.html
l6_factor/: l6_content.html  l6_definitions.html  l6_method.html  l6_objectives.html  l6_problem.html
l7_ionic/: l7_content.html  l7_definitions.html  l7_method.html  l7_objectives.html  l7_problem.html
l8_covalent/: l8_content.html  l8_definitions.html  l8_method.html  l8_objectives.html  l8_problem.html
l9_mechanical/: l9_content.html  l9_definitions.html  l9_method.html  l9_objectives.html  l9_problem.html
(+185 files in other folders)
