[tool.poetry]
name = "solidstateleipzig-github-io"
version = "0.1.0"
description = ""
authors = ["CrinaBerbecariu <crinaberbecariu25@gmail.com>"]
readme = "README.md"
packages = [{include = "solidstateleipzig"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
ipykernel = "^6.29.5"
ghp-import = "^2.1.0"
pandas = "^2.2.3"
polars = "^1.19.0"
altair = "^5.5.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
